assets/css/rich-image-float.css
/* Pattern 1: float with text wrap (editor + frontend) */

.tiptap .content-image-float-left,
.tiptap figure.content-image-float-left,
.content-image-float-left,
figure.content-image-float-left {
  float: left;
  margin: 0 1.5rem 1rem 0;
  max-width: min(50%, 28rem);
}

.tiptap .content-image-float-right,
.tiptap figure.content-image-float-right,
.content-image-float-right,
figure.content-image-float-right {
  float: right;
  margin: 0 0 1rem 1.5rem;
  max-width: min(50%, 28rem);
}

@media (max-width: 767px) {
  .content-image-float-left,
  .content-image-float-right,
  figure.content-image-float-left,
  figure.content-image-float-right {
    float: none;
    max-width: 100%;
    width: 100%;
    margin: 1rem 0;
  }
}

